# RoboFEI_Tarefa1

./: CMakeLists.txt  README.md  package.xml
Tarefa01/: CMakeLists.txt  Publisher.py  Subscriber.py
Tarefa01/install/: local_setup.sh  setup.sh
Tarefa01/install/pacote/lib/pacote/: listener  talker
Tarefa01/install/pacote/share/pacote/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Tarefa01/install/pacote/share/pacote/cmake/: pacoteConfig.cmake
Tarefa01/log/: latest_build
Tarefa01/my_package/: package.xml  setup.py
Tarefa01/py_pubsub/: package.xml  setup.py
src/: number_counter.cpp
